objects/User.object
<CustomObject>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <label>Agent Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
        <language>en_US</language>
        <sharedTo>
            <role>Customer_Care_Leadership</role>
            <role>HBC_Corporate</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Knowledge_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KNOWLEDGE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Knowledge Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MHF_Generic</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>MHF - Moncton,MHF - Cebu</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MHF Generic</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>